--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "headlessui": "^0.0.0",
+    "js-cookie": "^3.0.5",
     "jsvectormap": "^1.6.0",
     "match-sorter": "^8.0.0",
     "mongoose": "^8.8.1",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/axios": "^0.14.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.5",
